modularized mdx posts, cleaned up links page

--- a/data/projects/first-post.mdx
+++ b/data/projects/first-post.mdx
@@ -3,6 +3,7 @@ title: "First MDX Post"
 date: "December 24, 2020"
 author: "Paul Lorenc"
 excerpt: "I have been working on a new portfolio website using Next.js and MDX to write markup on my Next site."
+src: "/icons/ts.png"
 ---
 
 ## MDX
