--- a/data/projects/getting-started.mdx
+++ b/data/projects/getting-started.mdx
@@ -3,6 +3,7 @@ title: "Getting started with MDX"
 date: "December 23, 2020"
 author: "MDX Team"
 excerpt: "Making this in MDX for simplicity and flexibility hkjh hjhvj hhkj hkjgbkjbjk bjbkjbkjlbk jbkjbjk.jb"
+src: "/icons/p5js.png"
 ---
 
 ## Why MDX ?
