--- a/data/projects/random.mdx
+++ b/data/projects/random.mdx
@@ -3,6 +3,7 @@ title: "Writing random points"
 date: "2020-10-09"
 author: "Jashn Maloo"
 excerpt: "World is random in what it does, so let's write something random sdfasdfasdfa sdfas df asdfasd sdfsadf."
+src: "/icons/p5js.png"
 ---
 
 ## Some random points
