style changes and images layout fix

--- a/data/code/next-portfolio.mdx
+++ b/data/code/next-portfolio.mdx
@@ -44,7 +44,7 @@ I styled this website using [Tailwind CSS](https://tailwindcss.com/)
 
 ```
 bash
-$ git clone https://github.com/paul-lorenc/next-portfolio.git
+$ git clone https:github. com/ asdgag/ asdgh asd/h/asdfha/hafd/ha/dfh/adfh
 $ cd next-portfolio
 $ npm install
 ```
