--- a/data/code/next-portfolio.mdx
+++ b/data/code/next-portfolio.mdx
@@ -2,9 +2,17 @@
 title: "Next-Portfolio"
 date: "December 27, 2020"
 author: "Paul Lorenc"
-excerpt: "After learning about Nextjs, I decided to rebuild my portfolio website using Nextjs, Typescript, and TailwindCSS"
+excerpt: "After learning about Nextjs, I decided to rebuild my portfolio website using Nextjs, Typescript, and TailwindCSS."
 src: "/icons/nextjs.png"
 ---
+
+<Image
+  src="/banners/home-banner.png"
+  width={1280}
+  height={640}
+  layout="responsive"
+  alt="paul lorenc portfolio website"
+/>
 
 ### [View The Project Here](https://paul-lorenc.com)
 
