tynet photo fix

--- a/data/code/tynet.mdx
+++ b/data/code/tynet.mdx
@@ -7,7 +7,7 @@ src: "/icons/pytorch.png"
 ---
 
 <Image
-  src="/projects/mtyner.png"
+  src="/projects/tynet/mtyner.png"
   width={939}
   height={939}
   layout="responsive"
